--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
 spring:
   profiles: cloud
 eureka:
+  instance:
+    hostname: ${vcap.application.uris[0]}
+    nonSecurePort: 80
   client:
     serviceUrl:
       defaultZone: https://cnj-registry.cfapps.io/eureka/
